2013-01-24  Eric Seidel  <eric@webkit.org>

        Skip haslanded_unittest.py on systems which do not have interdiff installed
        https://bugs.webkit.org/show_bug.cgi?id=106402

        Unreviewed.

        * Scripts/webkitpy/tool/steps/haslanded_unittest.py:
        (HasLandedTest):

2013-01-24  Ryosuke Niwa  <rniwa@webkit.org>

        Disable the failing webkitpy test for now.

        * Scripts/webkitpy/tool/steps/haslanded_unittest.py:

2013-01-24  Tim 'mithro' Ansell  <mithro@mithis.com>

        Fixing the diff_parser to correctly identify git diffs even with leading comments.
        https://bugs.webkit.org/show_bug.cgi?id=107871

        Reviewed by Eric Seidel.

        * Scripts/webkitpy/common/checkout/diff_parser.py:
        * Scripts/webkitpy/common/checkout/diff_parser_unittest.py:
        * Scripts/webkitpy/tool/steps/haslanded.py:

2013-01-24  James Robinson  <jamesr@chromium.org>

        [chromium] Remove dead transitional code from WebViewImpl
        https://bugs.webkit.org/show_bug.cgi?id=107889

        Reviewed by Adrienne Walker.

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::initializeLayerTreeView):
        (WebViewHost::setWebWidget):

2013-01-24  Joshua Bell  <jsbell@chromium.org>

        Add watchlist for IndexedDB development, and add myself and others.

        Unreviewed.

        * Scripts/webkitpy/common/config/watchlist:

2013-01-24  Martin Robinson  <mrobinson@igalia.com>

        Abstract the logic for appending a UChar32 onto StringBuilder
        https://bugs.webkit.org/show_bug.cgi?id=107505

        Reviewed by Darin Adler.

        * TestWebKitAPI/Tests/WTF/StringBuilder.cpp:
        (TestWebKitAPI::TEST): Added a simple test for appending UChar32.

2013-01-24  Erik Arvidsson  <arv@chromium.org>

        Unreviewed, rolling out r140703.
        http://trac.webkit.org/changeset/140703
        https://bugs.webkit.org/show_bug.cgi?id=107556
